Update how messages and placeholders are handled.
Fixed an issue with PlaceholderAPI.
{prefix} and {Prefix} now can be used as placeholders anywhere.
Added safety nets to all configuration files.